--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,20 @@
+
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="button.css">
-  </head>
-  <body>
-    <button id="changeColor"></button>
-    <script src="popup.js"></script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Quotes</title>
+
+  <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+
+  <p> Quote of the Day</p>
+  <p id="motivationalQuote"> Breathe in... Breathe Out.... </p>
+
+  <script src="popup.js"></script>
+</body>
 </html>
